Revert "Shared: Components: Table: fix broken in safari"
This reverts commit ecef1b1a02658a2198b5a2612a8ff3ce99cbfed8.

--- a/packages/shared/components/table/table-header/TableHeader.module.scss
+++ b/packages/shared/components/table/table-header/TableHeader.module.scss
@@ -27,7 +27,7 @@
  */
 
 .tableHeader {
-  position: sticky;
+  position: fixed;
   background: var(--background-color);
   display: grid;
   z-index: 1;
@@ -48,4 +48,10 @@
 
 .tableHeaderRow {
   display: contents;
+}
+
+.emptyTableContainer {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  height: 40px;
 }
